feat: use Java 25 aot